# osm-localization

./: .gitignore  CMakeLists.txt  README.md  global_logs_with_error.csv  high_freq_global_callogs_with_error.csv  high_freq_local_callogs_with_error.csv  lidar_local_seen_tests.sh  local_logs_with_error.csv  mono_dynamic_local_seen_tests.sh  mono_global_seen_tests.sh  mono_local_seen_tests.sh  odom.rviz  osm_mono.rviz  osm_pf_2.rviz  osm_pf_2_with_cam.rviz  package.xml  read.ipynb  stereo_lglobal_seen_tests .sh
config/: config.yaml
config/lidar/dynamic/seen/local/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/mono/dynamic/seen/local/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/mono/seen/global/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/mono/seen/local/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/stereo/dynamic/seen/local/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/stereo/seen/global/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/stereo/seen/local/: config_exp.yaml  config_gaussian.yaml  config_maplite.yaml  config_quadratic.yaml
config/v2/: config.yaml
include/: osm_pf.h  osmv2.h
launch/: descriptor_search2d.launch  lidar_bev.launch  osm_pf.launch  osm_pf_lidar.launch  osm_pf_mono.launch  osm_pf_stereo.launch  osm_pf_v2.launch  ouster_driver.launch  pf_node.launch
msg/: PoseArray2D.msg
notebooks/: comparison.ipynb
rviz/: osm_mono.rviz  osm_pf.rviz  osm_pf_2.rviz  osm_pf_2_with_cam.rviz
src/: error_log.py  img_to_pointcloud.cpp  odometry.py  osm_pf.cpp  osmv2.cpp  pf_node.cpp  pose_cov.cpp  utm.cpp  utm_connvert.py
src/v2/: core.py  global_search_server.py  lidar_bev.py  pf_v2_main.cpp  road_descriptor.py  simulate_lidar.py
srv/: GlobalSearch.srv
test_cases/iter1-data/: high_freq_global_callogs_with_error.csv  laser_odom.rviz  lidar.rviz  stereo.rviz  unseen_map.rviz
